updated and fixed spacings, navbar, content containers

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,51 @@ header {
     top:0;
 }
 
+.hero {
+    .hero-text {
+        padding: 12rem 0 11rem 0;
+        position: relative;
+
+
+        @include media("<=phone") {
+            padding: 4.5rem 0 9rem 0;
+        }
+        &::after {
+            content: url(../assets/purple-tag.svg);
+            position: absolute;
+            bottom: 20%;
+            left: 102%;
+            z-index: 1;
+
+            @include media("<=tablet") {
+                display: none;
+            }
+        }
+
+        &::before {
+            content: url(../assets/particles-background.png);
+            position: absolute;
+            top: 15%;
+            left: 90%;
+            height: 100%;
+            // width: 80px;
+            z-index: -1;
+
+            @include media("<=tablet") {
+                height: 100%;
+                bottom: -40%;
+                left: 70%;
+            }
+
+            @include media("<=phone") {
+                bottom: -10%;
+                left: 70%;
+                content: none;
+            }
+        }
+    }
+}
+
 
 
 
